# autosynth

./: .dockerignore  .flyignore  .gitignore  .gitmodules  BOOTSTRAP.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  synth_ideas.csv  tsconfig.json  vite.config.ts
.claude/agents/: audio-component-spec-writer.md  dsp-engineer.md  project-coordinator.md  qa-engineer.md  sound-designer.md  synth-architect.md  systems-engineer.md  ui-developer.md
.claude/commands/: sync-docs.md
.github/workflows/: docker-image.yml
components/: DualModeOscillator.tsx  Oscilloscope.stories.tsx  SynthADSR.jsx  SynthADSR.stories.tsx  SynthLFO.stories.tsx  SynthRow.d.ts  SynthSequencer.d.ts  SynthVUMeter.jsx  VintageSynthUI.jsx
components/audio/DualModeOscillator/: UI.tsx  WebAudio.ts  index.ts
core/ui/: COMPONENT_LIBRARY.md
core/ui/.storybook/: main.ts
core/ui/components/: DualModeOscillator.d.ts  DualModeOscillator.stories.tsx  Oscilloscope.d.ts  Synth.jsx  Synth.stories.tsx  SynthADSR.d.ts  SynthDAHDSR.jsx  SynthDAHDSR.stories.tsx  SynthKnob.stories.tsx  SynthKnob.tsx  SynthLCD.jsx  SynthLCD.stories.tsx  SynthLED.stories.tsx  SynthRow.jsx  SynthRow.stories.tsx  SynthSequencer.jsx  SynthSequencer.stories.tsx  SynthSlider.jsx  SynthSlider.stories.tsx  SynthVUMeter.stories.tsx  TransportControls.d.ts  TransportControls.stories.tsx  VintageSynthUI.d.ts  index.js
core/ui/layout/: Column.tsx  SynthLayout.tsx
core/ui/styles/: shared.ts
core/ui/themes/: generator.ts  schema.ts
core/ui/types/: components.d.ts  jsx-components.d.ts  juce.d.ts  parameters.ts  theme.ts
core/ui/utils/: juce-bridge.ts
docker/: Dockerfile.dev  claude-settings.json  docker-compose.yml  nginx.conf
docs/: DESIGNER_GUIDE.md  DSP_LIBRARIES.md  INDEX.md  LLM_SYNTH_PROGRAMMING_GUIDE.md  OPEN_SOURCE_DSP_LIBRARIES.md  SST_LIBRARIES_INDEX.md  TAPE_EMULATION_OPTIONS.md  TYPESCRIPT_COMPONENT_DEVELOPER_GUIDE.md  WASM_ARCHITECTURE.md
hooks/: useJUCEBridge.ts  useParameters.ts
layout/: ParameterGroup.tsx  Row.tsx
plugins/A1115VCO/: CMakeLists.txt
plugins/A1115VCO/source/: PluginProcessor.cpp  PluginProcessor.h
plugins/A1115VCO/ui/: package-lock.json  tsconfig.json
plugins/DFAM/: CMakeLists.txt
plugins/DFAM/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
plugins/FMDrone/: README.md
plugins/FMDrone/ui/: package.json  tsconfig.json
plugins/FMDrums/: README.md  libs  synth-spec.json
plugins/FMDrums/source/: PluginEditor.cpp  PluginProcessor.h
plugins/FMDrums/tests/: CMakeLists.txt  test_drum_voice.cpp
plugins/FMDrums/ui/: index.html  package-lock.json  vite.config.ts
plugins/ModelD/: CMakeLists.txt
plugins/ModelD/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/ModelD/tests/: test_engine.cpp  test_voice.cpp
plugins/ModelD/ui/: package-lock.json  package.json
plugins/PhoneTones/source/: PluginEditor.cpp  PluginProcessor.cpp
plugins/Phoneme/: CMakeLists.txt  README.md  synth-spec.json
plugins/Phoneme/ui/: package-lock.json  package.json
plugins/SIDWave/: CMakeLists.txt  README.md  synth-spec.json
plugins/SIDWave/source/: PluginProcessor.h
plugins/Subharmonicon/: CMakeLists.txt  README.md
plugins/Subharmonicon/source/: PluginEditor.cpp  PluginEditor.h
plugins/Subharmonicon/ui/: package-lock.json  vite.config.ts
plugins/TapeLoop/: CMakeLists.txt  README.md  synth-spec.json
plugins/TapeLoop/source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
plugins/TapeLoop/tests/: CMakeLists.txt  test_engine.cpp
plugins/TapeLoop/ui/: vite.config.ts
plugins/synths/FMDrone/tests/: CMakeLists.txt
plugins/synths/PhoneTones/: CMakeLists.txt  synth-spec.json
plugins/synths/PhoneTones/source/: PluginEditor.h  PluginProcessor.h
plugins/synths/PhoneTones/tests/: CMakeLists.txt  test_voice.cpp
plugins/synths/PhoneTones/ui/: index.html  package-lock.json  package.json  vite.config.ts
plugins/synths/PhoneTones/ui/src/: App.tsx  main.tsx
plugins/synths/PhoneTones/ui/src/components/: Oscilloscope.tsx
plugins/synths/PhoneTones/ui/src/hooks/: useParameters.ts
plugins/synths/PhoneTones/ui/src/types/: parameters.ts
plugins/synths/Phoneme/tests/: CMakeLists.txt  test_engine.cpp  test_voice.cpp
presets/: ComponentLibraryDemo.tsx  ComponentShowcase.tsx  MinimalSynth.tsx  SawtoothSynth.tsx
prototypes/wasm-test-env/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-all.sh  dev.sh  docker-run.sh  generate-from-spec.js  generate_synth_ideas.py  new-plugin.sh  new-synth.sh
synths/AdditiveSquare/: ARCHITECTURE.md  BUILD_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md
synths/PeanutsVoice/: Makefile  README.md
templates/: dsp-libraries.json  synth-spec.example.json  synth-spec.granular-example.json  synth-spec.schema.json
templates/docs/: ARCHITECTURE_TEMPLATE.md  PARAMETERS_TEMPLATE.md  SONIC_GOALS_TEMPLATE.md
templates/plugin-template/: CMakeLists.txt  README.md
templates/plugin-template/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
templates/plugin-template/source/dsp/: SynthEngine.h
templates/plugin-template/tests/: test_engine.cpp  test_voice.cpp
templates/plugin-template/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
templates/plugin-template/ui/src/: App.tsx
templates/plugin-template/ui/src/components/: SynthKnob.tsx
templates/plugin-template/ui/src/styles/: global.css
templates/plugin-template/ui/src/types/: components.ts
templates/presets/: example-preset.json  preset-schema.json
templates/synth-template/: Makefile  README.md
themes/: presets.ts
web-dfam/: .gitignore  Dockerfile  Makefile  docker-compose.yml  index.html  package-lock.json  package.json  run.sh  vite.config.ts
web-dfam/public/: dfam-processor.js  dfam.js  tapeloop-processor.js  tapeloop.js
web-dfam/src/: App.tsx  main.tsx
website/: index.html  package.json  vite.config.ts
website/src/: App.css  App.tsx  index.css
(+209 files in other folders)
